// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions log service createMany Создает и возвращает массив моделей логов 1`] = `
Array [
  Object {
    "action": "publish",
    "author": "rbuslov",
    "entity": "post",
    "id": 1,
    "timestamp": 2021-09-08T12:30:35.000Z,
    "urlPart": "avtovaz-lishil-lady-mediasistemy-izza-nehvatki-mikroshem",
  },
  Object {
    "action": "publish",
    "author": "mtsymbal",
    "entity": "post",
    "id": 2,
    "timestamp": 2021-09-08T12:30:35.000Z,
    "urlPart": "renaultsafrane",
  },
  Object {
    "action": "publish",
    "author": "swapster",
    "entity": "post",
    "id": 3,
    "timestamp": 2021-09-08T12:30:35.000Z,
    "urlPart": "electromustang",
  },
]
`;

exports[`Actions log service updatePostKey Обновляет urlPart и возвращает количество обновленных записей 1`] = `
Array [
  Object {
    "action": "create",
    "author": "aandreev",
    "entity": "post",
    "id": 1,
    "timestamp": 2021-09-08T12:30:35.000Z,
    "urlPart": "some-new-url-part",
  },
  Object {
    "action": "publish",
    "author": "rbuslov",
    "entity": "post",
    "id": 2,
    "timestamp": 2021-09-08T12:30:35.000Z,
    "urlPart": "some-new-url-part",
  },
]
`;

exports[`Actions log service updatePostKey Обновляет urlPart только у постов 1`] = `
Array [
  Object {
    "action": "create",
    "author": "aandreev",
    "entity": "post",
    "id": 1,
    "timestamp": 2021-09-08T12:30:35.000Z,
    "urlPart": "some-new-url-part",
  },
  Object {
    "action": "publish",
    "author": "rbuslov",
    "entity": "post",
    "id": 2,
    "timestamp": 2021-09-08T12:30:35.000Z,
    "urlPart": "some-new-url-part",
  },
]
`;
